--- a/requirements.txt
+++ b/requirements.txt
@@ -6,10 +6,16 @@ catalogue==2.0.8
 certifi==2022.12.7
 charset-normalizer==3.1.0
 click==8.1.3
+cloudpickle==2.2.1
 colorama==0.4.6
 confection==0.0.4
+croniter==1.3.8
 cymem==2.0.7
+dask==2023.3.1
+distributed==2023.3.1
+docker==6.0.1
 flatbuffers==23.3.3
+fsspec==2023.3.0
 funcy==1.18
 gast==0.4.0
 gensim==4.3.1
@@ -18,15 +24,22 @@ google-auth-oauthlib==0.4.6
 google-pasta==0.2.0
 grpcio==1.51.3
 h5py==3.8.0
+HeapDict==1.0.1
 idna==3.4
+importlib-resources==5.12.0
 Jinja2==3.1.2
 joblib==1.2.0
 keras==2.11.0
 langcodes==3.3.0
 libclang==15.0.6.1
+locket==1.0.0
 Markdown==3.4.1
 MarkupSafe==2.1.2
+marshmallow==3.19.0
+marshmallow-oneofschema==3.0.1
+msgpack==1.0.5
 murmurhash==1.0.9
+mypy-extensions==1.0.0
 nltk==3.8.1
 numexpr==2.8.4
 numpy==1.24.2
@@ -34,16 +47,25 @@ oauthlib==3.2.2
 opt-einsum==3.3.0
 packaging==23.0
 pandas==1.5.3
+partd==1.3.0
 pathy==0.10.1
+pendulum==2.1.2
+prefect==1.4.1
 preshed==3.0.8
 protobuf==3.19.6
+psutil==5.9.4
 psycopg2==2.9.5
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
 pydantic==1.10.5
 pyLDAvis==3.4.0
+python-box==7.0.1
 python-dateutil==2.8.2
+python-slugify==8.0.1
 pytz==2022.7.1
+pytzdata==2020.1
+pywin32==305
+PyYAML==6.0
 regex==2022.10.31
 requests==2.28.2
 requests-oauthlib==1.3.1
@@ -52,10 +74,13 @@ scikit-learn==1.2.2
 scipy==1.10.1
 six==1.16.0
 smart-open==6.3.0
+sortedcontainers==2.4.0
 spacy==3.5.1
 spacy-legacy==3.0.12
 spacy-loggers==1.0.4
 srsly==2.4.6
+tabulate==0.9.0
+tblib==1.7.0
 tensorboard==2.11.2
 tensorboard-data-server==0.6.1
 tensorboard-plugin-wit==1.8.1
@@ -64,12 +89,18 @@ tensorflow-estimator==2.11.0
 tensorflow-intel==2.11.0
 tensorflow-io-gcs-filesystem==0.31.0
 termcolor==2.2.0
+text-unidecode==1.3
 thinc==8.1.9
 threadpoolctl==3.1.0
+toml==0.10.2
+toolz==0.12.0
+tornado==6.2
 tqdm==4.65.0
 typer==0.7.0
 typing_extensions==4.5.0
 urllib3==1.26.14
 wasabi==1.1.1
+websocket-client==1.5.1
 Werkzeug==2.2.3
 wrapt==1.15.0
+zict==2.2.0
