--- a/requirements.txt
+++ b/requirements.txt
@@ -22,6 +22,7 @@ gensim==4.3.1
 google-auth==2.16.2
 google-auth-oauthlib==0.4.6
 google-pasta==0.2.0
+greenlet==2.0.2
 grpcio==1.51.3
 h5py==3.8.0
 HeapDict==1.0.1
@@ -78,6 +79,7 @@ sortedcontainers==2.4.0
 spacy==3.5.1
 spacy-legacy==3.0.12
 spacy-loggers==1.0.4
+SQLAlchemy==2.0.7
 srsly==2.4.6
 tabulate==0.9.0
 tblib==1.7.0
