--- a/requirements.txt
+++ b/requirements.txt
@@ -2,10 +2,9 @@ gensim==4.3.1
 nltk==3.8.1
 numpy==1.23.3
 pandas==1.5.0
-prefect==1.4.1
 psycopg2==2.9.5
 pydantic==1.10.2
-pyLDAvis==3.4.0
-spacy==3.5.1
+schedule==1.1.0
 SQLAlchemy==2.0.7
 tensorflow==2.11.1
+tensorflow_intel==2.11.1
