Updated requirements.txt file.

--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ pandas==1.5.0
 psycopg2==2.9.5
 pydantic==1.10.2
 schedule==1.1.0
+spacy==3.5.1
 SQLAlchemy==2.0.7
-tensorflow==2.11.1
-tensorflow-intel
+tensorflow==2.12.0
+tensorflow_intel
