--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,9 @@
+fastapi[all]
 gensim==4.3.1
 nltk==3.8.1
 numpy==1.23.3
 pandas==1.5.0
 psycopg2==2.9.5
-pydantic==1.10.2
-schedule==1.1.0
 spacy==3.5.1
 SQLAlchemy==2.0.7
 tensorflow==2.12.0
